[#26] refactor: 도착처리 문제 해결